# BTH_Resource_Manager

./: .gitignore
proj/: CMakeLists.txt  generateSolution.bat
src/core/: CMakeLists.txt  PacaReader.cpp  PacaReader.h  PacaWriter.cpp  PacaWriter.h  Serializer.h  main.cpp
src/resourcemanager/: CMakeLists.txt
src/resourcemanager/core/: FileUtility.cpp  FileUtility.h  GLThreadPool.cpp  GLThreadPool.h  MeshParser.cpp  MeshParser.h  ModelFileParser.h  ObjParser.cpp  ObjParser.h  PacaReader.cpp  PacaReader.h  PlatformDefinitions.h  ResourceManager.cpp  ResourceManagerLibraryDefine.h  SoundTask.cpp  SoundTask.h  TextureTask.cpp  TextureTask.h
src/resourcemanager/interface/: ResourceManager.h
src/tests/: CMakeLists.txt  generate_vs14_x64_solution.bat  generate_vs14_x86_solution.bat  textureloading.cpp
testAssets/: Asset1.txt  Asset2.txt
testAssets/subfolder/: Asset3.txt
